# imgviewer

./: AGENTS.md  CMakeLists.txt  LICENSE
branding/: README.md  imgviewer.desktop
src/: DirectoryEntry.cpp  DirectoryList.cpp  DirectoryListContainer.cpp  Filter.cpp  ImageDetailList.cpp  ImageDetailModel.cpp  ImageView.cpp  MainWindow.cpp  TagList.cpp  TagListContainer.cpp  main.cpp  utils.cpp
src/include/imgviewer/: DirectoryEntry.h  DirectoryList.h  DirectoryListContainer.h  Filter.h  ImageDetailList.h  ImageDetailModel.h  ImageView.h  MainWindow.h  TagList.h  utils.h
